# ja_pagou

./: README.md  manage.py  pyproject.toml
core/: apps.py  factory.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payier_alter_payment_receiver.py
ja_pagou/: asgi.py  settings.py  urls.py  wsgi.py
